--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "COLKEY",
         "Graphy",
         "pyxel",
-        "pyxres"
+        "pyxres",
+        "rectb"
     ],
 	"python.analysis.generateWithTypeAnnotation": true,
 	"python.analysis.inlayHints.functionReturnTypes": true,
